Update API (add DB.uids), update unit tests so each entry has a description

--- a/sandbox/DB.ipynb
+++ b/sandbox/DB.ipynb
@@ -783,6 +783,61 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'0b458afd05842be88d7fcf63faf5ed12',\n",
+       " '0f066e49b6d7d7df6182f9a8c1e9170e',\n",
+       " '0f5de0d0dc3b0244e8ee5b62b2efa1f4',\n",
+       " '2101e974dfca234e4c093b84a9568e46',\n",
+       " '2150450761027e5e2eafd311e2dc11c9',\n",
+       " '22b01802c1d8f2bb80933b1ccaa17f2d',\n",
+       " '2961ef04482764bd274281f568b6fc18',\n",
+       " '2c8339e1a27b31ce8c69a33f3047bb10',\n",
+       " '2d643f9ce502fa1a470fec13c257f91b',\n",
+       " '39f7e339301b367f819580ae4eebfb3d',\n",
+       " '3ebe742846ad94271ebbdb2e998957a6',\n",
+       " '4a538877cdd08ec22af5d40b305cc7fc',\n",
+       " '4b840d81d9b51a429452543bd0c86e35',\n",
+       " '5e372ff68cf3e9430d2ac65285adce07',\n",
+       " '6122b459dff6965be697cc43604340eb',\n",
+       " '64eaff7caf4ac8028571ec5df719c458',\n",
+       " '6d666f0bc82e916cd23feaf6b98d904c',\n",
+       " '7029c58c3f1df094df529dc90bace187',\n",
+       " '717d12e61f0e7e4b0c064fbfb3582faa',\n",
+       " '728a6508185d6aea56dd6b28f8e776db',\n",
+       " '7a3a7c0353115742f8df45d13ae8674d',\n",
+       " '7e44ef5b7241568508bea6405857b619',\n",
+       " '84890a1120008759237cdc91936af3ce',\n",
+       " '88109b34c858f1d987d0521bdcb73218',\n",
+       " '8a56619a42cea0e7e21ce674aae1434b',\n",
+       " '8c73c88f9d62dca20a74781cf2fcd2eb',\n",
+       " '9c50e74c3edb5c897ad523a4aaa278e0',\n",
+       " 'a1bc4689b9a8321c87541bb298978010',\n",
+       " 'a90607bba76e5527b54daa5251e051d1',\n",
+       " 'b255906404b87487eca4f673896d9129',\n",
+       " 'c3df8fb51698a96c202466b8ff893b9e',\n",
+       " 'c9fa041c4976ab820dd37578ceb82301',\n",
+       " 'd9873baa9303c913055b9101058c5ad4',\n",
+       " 'e338fc23c8a6f8ea101d5166c38cd724',\n",
+       " 'e8ea5eee69f57cb90504a6a4070d54f0',\n",
+       " 'fbb680f22fb60ea2bd3d9b63f83196b3'}"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "{e.uid for e in Entry.objects}"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
