--- a/sandbox/parsers.ipynb
+++ b/sandbox/parsers.ipynb
@@ -17,8 +17,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Text sample from a Journal"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -54,6 +61,13 @@
     "for s in lines:\n",
     "    cmnd, *comment = re.split(r'[;#]', s)\n",
     "    print(cmnd, comment)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Make sure `re.sub` strips out the chars we want from an amount."
    ]
   },
   {
@@ -78,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -102,6 +116,253 @@
     "for s in amounts:\n",
     "    t = re.sub(r'[,$]','',s)\n",
     "    print(float(t))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### TOML"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We're using TOML (a JSON alternative) for configuration files."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tomllib\n",
+    "from pathlib import Path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p = Path.home() / 'Personal/Finances/dex.toml'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p.is_file()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(p, 'rb') as f:\n",
+    "    res = tomllib.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'terminology': {'credit': 'credit', 'debit': 'debit'},\n",
+       " 'csv': {'occu': {'accounts': ['buckets',\n",
+       "    'checking-jc',\n",
+       "    'checking-lc',\n",
+       "    'savings-jc',\n",
+       "    'savings-lc',\n",
+       "    'reservoir'],\n",
+       "   'description': 'desc',\n",
+       "   'date': 'date',\n",
+       "   'amount': 'amount',\n",
+       "   'column': 'column'}}}"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What we learned:\n",
+    "* each section in the TOML document is a key in the resulting dict\n",
+    "* if a section has subsections, the section name associated with another dictionary where the key is the subsection name (minus the section name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import namedtuple"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ColMap = namedtuple('ColMap', ['description', 'date', 'amount', 'column'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'terminology': {'credit': 'credit', 'debit': 'debit'},\n",
+       " 'csv': {'occu': {'accounts': ['buckets',\n",
+       "    'checking-jc',\n",
+       "    'checking-lc',\n",
+       "    'savings-jc',\n",
+       "    'savings-lc',\n",
+       "    'reservoir'],\n",
+       "   'description': 'desc',\n",
+       "   'date': 'date',\n",
+       "   'amount': 'amount',\n",
+       "   'column': 'column'}}}"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dct = res['csv']['occu']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['buckets',\n",
+       " 'checking-jc',\n",
+       " 'checking-lc',\n",
+       " 'savings-jc',\n",
+       " 'savings-lc',\n",
+       " 'reservoir']"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dct.pop('accounts')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'description': 'desc', 'date': 'date', 'amount': 'amount', 'column': 'column'}"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dct"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p = {'a': 0, 'b': 1}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p |= dct"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'a': 0,\n",
+       " 'b': 1,\n",
+       " 'description': 'desc',\n",
+       " 'date': 'date',\n",
+       " 'amount': 'amount',\n",
+       " 'column': 'column'}"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p"
    ]
   },
   {
