Pair halves of bank transfers and card payments

--- a/sandbox/DB.ipynb
+++ b/sandbox/DB.ipynb
@@ -1158,6 +1158,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 214,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "e.note = \"hello\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 216,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Entry: <En 2024-01-02 bank:checking +$5000.0>>"
+      ]
+     },
+     "execution_count": 216,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "e.save()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
