REPL displayes one transaction, arrow keys navigate through list of entries

--- a/sandbox/regexp.ipynb
+++ b/sandbox/regexp.ipynb
@@ -482,6 +482,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "line = '  {date:>10s}  {desc:^20s}'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'          hi           ho         '"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "line.format(date='hi',desc='ho')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
